Issue #2277: - Add aria-label for accessibility - Change font color slightly for better contrast - Now displays full date and time in tooltip on hover

--- a/sass/overrides/_modal.scss
+++ b/sass/overrides/_modal.scss
@@ -11,3 +11,7 @@ modal {
         pointer-events: none;
     }
 }
+
+.tooltip-visible-el {
+    color: #FEFEFE;
+}
